Refactor project structure and enhance functionality
- Updated .gitignore to exclude additional files and directories.
- Added security notes to README regarding potential risks.
- Created example .env file for environment variable configuration.
- Introduced TODO document for tracking future improvements.
- Added file and router specialists to handle specific tasks.
- Enhanced LLM client to support tool invocation.
- Updated main.py to allow user prompts via command-line arguments.
- Removed outdated requirements.txt and added necessary dependencies.

--- a/app/src/.gitignore
+++ b/app/src/.gitignore
@@ -1,8 +1,8 @@
 # .gitignore
 
 # Ignore actual prompt files, but keep the templates.
-/prompts/*.txt
-!prompts/*.txt.example
+/prompts/*.md
+!prompts/*.md.example
 
 .env
 *.code-workspace
