--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
 # .gitignore
 
-# Ignore actual prompt files, but keep the templates.
-app/prompts/*.txt
-!app/prompts/*.txt.example
-
+# --- Environment ---
+# Ignore local environment variables. Never commit secrets.
 .env
+
+# --- Python ---
+# Ignore cache files, compiled files, and virtual environments.
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# --- IDE / Editor ---
+# Ignore editor-specific configuration files.
+.vscode/
 *.code-workspace
 
-__pycache__/*
-src/__pycache__/*
-src/agents/__pycache__/*
-src/graph/__pycache__/*
+# --- Application Specific ---
+# Ignore the specialist prompt files within the app directory.
+app/prompts/*_prompt.md
+!app/prompts/*_prompt.md.example
+.venv_agents/
