Enhance project structure and functionality: - Update .gitignore to include .venv_agents_windows/ - Improve Developers Guide with detailed specialist constraints and prompt contract steps - Add enums refactor proposal document - Update TODO list with completed tasks and new priorities - Create data extractor and router specialist prompts with strict JSON output requirements - Refactor enums.py to include Edge enumeration - Enhance GraphState to track additional attributes - Implement retry logic in LLM clients for robust error handling - Introduce routing logic in main.py for specialist decision-making - Refactor specialists to use load_prompt function for prompt loading - Add windows_run.bat for easy execution - Update requirements.txt to ensure all dependencies are listed

--- a/app/prompts/router_specialist_prompt.md.example
+++ b/app/prompts/router_specialist_prompt.md.example
@@ -8,13 +8,15 @@ Here are the available specialists and their functions:
 
 - **file_specialist**: Use this when the user explicitly asks to perform operations on files or directories, such as reading a file, writing to a file, or listing directory contents.
 
-Your response MUST be one of the following exact strings, corresponding to the chosen specialist:
+Your response MUST be a JSON object with a single key, "next_specialist", and the value must be one of the following exact strings, corresponding to the chosen specialist:
 
 - "prompt_specialist"
 - "data_extractor_specialist"
 - "file_specialist"
 
-Do NOT include any other text, explanations, or punctuation in your response. Only the specialist's name.
+If you are unsure which specialist to choose, default to "prompt_specialist".
+
+Do NOT include any other text, explanations, or punctuation in your response. Only the JSON object.
 
 ---
 User Request:
