--- a/app/docs/MANIFEST_Singleton_LLM_Client.json
+++ b/app/docs/MANIFEST_Singleton_LLM_Client.json
@@ -4,24 +4,25 @@
   "tasks": [
     {
       "task": "Open src/llm/factory.py",
-      "completed": false
+      "completed": true
     },
     {
       "task": "Add a private class-level dictionary to LLMClientFactory to store client instances.",
-      "completed": false
+      "completed": true
     },
     {
       "task": "Modify the create_client method to check the instances registry before creating a new client.",
-      "completed": false
+      "completed": true
     },
     {
       "task": "If a client instance exists in the registry, return it.",
-      "completed": false
+      "completed": true
     },
     {
       "task": "If a client instance does not exist, create it, store it in the registry, and then return it.",
-      "completed": false
+      "completed": true
     }
   ],
+  "completed": true,
   "test": "Run the application using `python -m src.main`. Observe the console output at startup. The '---INITIALIZED ... CLIENT---' message for any given provider (e.g., Gemini) should appear only once."
 }
