Refactor LLM Client Implementation and Enhance Testing Suite
- Introduced a retry mechanism for Gemini API errors using a helper function.
- Updated OllamaClient and LMStudioClient to map LangChain message types to appropriate roles.
- Enhanced logging during client initialization for better observability.
- Modified LLMClientFactory to implement a singleton pattern, ensuring only one instance of each client is created.
- Added unit tests for LLMClientFactory to verify singleton behavior and error handling.
- Implemented unit tests for LMStudioClient and OllamaClient to ensure correct payload formatting and response parsing.
- Consolidated agent-related code into the specialists directory, removing redundancy.
- Added comprehensive unit tests for specialists, ensuring stability and correctness of functionality.
- Updated requirements.txt to include necessary testing dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,4 @@ __pycache__/
 # Ignore the specialist prompt files within the app directory.
 app/prompts/*_prompt.md
 !app/prompts/*_prompt.md.example
-.venv_agents/
-.venv_agents_windows/
+.venv*/
