--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -1,3 +1,8 @@
 [pytest]
 pythonpath = .
 testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+addopts = -ra --strict-markers --import-mode=append
+markers =
+    live_llm: marks tests that require live LLM API calls
