--- a/app/docs/completed/MANIFEST_[completed]_Full_LM_Studio_Integration.json
+++ b/app/docs/completed/MANIFEST_[completed]_Full_LM_Studio_Integration.json
@@ -1,14 +1,14 @@
 {
   "project": "Full LM Studio Integration",
-  "completed": false,
+  "completed": true,
   "tasks": [
     {
       "task": "Implement configuration validation to ensure LM Studio environment variables (`LMSTUDIO_BASE_URL`, `LMSTUDIO_MODEL`) are correctly parsed and used.",
-      "completed": false
+      "completed": true
     },
     {
       "task": "Integrate LM Studio into key agents and conduct end-to-end testing.",
-      "completed": false
+      "completed": true
     },
     {
       "task": "Implement timeout mechanisms and error handling for non-responsive LM Studio servers.",
@@ -16,7 +16,7 @@
     },
     {
       "task": "Update developer documentation to reflect the new integration and configuration options.",
-      "completed": false
+      "completed": true
     }
   ],
   "test": "All functional requirements are met, as verified by acceptance criteria. Key agents function correctly with LM Studio without significant performance degradation. The integration is well-documented and easy to maintain."
