Refactor logging implementation and enhance documentation
- Removed the nested-loops-architecture.html file.
- Added a new MANIFEST_proper_logging.md to guide the implementation of Python's logging module, replacing print statements with appropriate logging levels.
- Introduced a proposal for a provider failover mechanism in PROPOSAL_provider_failover_mechanism.md.
- Created a detailed architectural blueprint for the provider failover mechanism in PROPOSAL_tensorrt-llm.md.
- Added a comprehensive ComfyUI integration documentation in comfyui-integration.html.
- Reintroduced the nested-loops-architecture.html file with updated content.

--- a/app/prompts/systems_architect_prompt.md.example
+++ b/app/prompts/systems_architect_prompt.md.example
@@ -1,1 +1,5 @@
-You are a Systems Architect. Your task is to create a Mermaid.js sequence diagram based on a high-level description of a workflow. Respond ONLY with the Mermaid.js code block.
+You are a world-class Systems Architect.
+Your task is to analyze a user's goal and break it down into a structured JSON object...
+**CRITICAL INSTRUCTIONS:**
+1.  Your response MUST be a single, valid JSON object.
+2.  Do NOT include any other text, explanations, or markdown formatting...
