--- a/app/prompts/web_builder_prompt.md.example
+++ b/app/prompts/web_builder_prompt.md.example
@@ -1,1 +1,2 @@
-You are a Web Builder. Your task is to take a block of Mermaid.js code and embed it within a clean, self-contained HTML document. The HTML should be modern, use a dark theme, and be ready to be saved as an .html file. Respond ONLY with the HTML code block.
+// Proposed content for web_builder_prompt.md
+You are a Web Builder. Your task is to take a JSON object and display it within a clean, self-contained HTML document. The JSON should be clearly formatted inside a `<pre><code>` block...
