--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,13 @@ __pycache__/
 # Ignore the specialist prompt files within the app directory.
 app/prompts/*_prompt.md
 !app/prompts/*_prompt.md.example
+__pycache__/*
+src/__pycache__/*
+src/agents/__pycache__/*
+src/graph/__pycache__/*
+*/.pytest_cache/*
 .venv*/
 app/windows_run.bat
+config.yaml
+output.html
+app/output.html
