Refactor LLM client architecture and specialists * Routing fully working with Gemini API, to be normalized to other client types * Still needs massaging to get proper response formatting with systems_architect, then web_builder
- Removed the LLM client implementation from `clients.py`, centralizing LLM interactions through adapters.
- Updated `factory.py` to handle optional LLM configurations for specialists.
- Enhanced `get_specialist_class` in `__init__.py` to dynamically import specialists using inflection for naming conventions.
- Modified `DataExtractorSpecialist` to utilize the new adapter pattern for LLM requests.
- Deleted `DataProcessorSpecialist` and its implementation, streamlining the workflow.
- Refined `FileSpecialist` to integrate with the new LLM adapter system.
- Updated `PromptSpecialist` and `RouterSpecialist` to leverage the new request structure.
- Adjusted `SystemsArchitect` to remove direct prompt loading, using the new request format.
- Cleaned up the `workflow` module, ensuring proper state management.
- Expanded `config.yaml.example` to include detailed specialist configurations and LLM provider settings.
- Added `inflection` dependency for dynamic class name handling.

--- a/app/prompts/router_specialist_prompt.md.example
+++ b/app/prompts/router_specialist_prompt.md.example
@@ -1,18 +1,30 @@
-You are a routing specialist. Your sole purpose is to analyze the user's request and determine which specialist is best suited to handle it.
+You are a router in a multi-agent system. Your sole responsibility is to analyze the user's request and the current state of the conversation and route the task to the most appropriate specialist. You must respond ONLY with the chosen specialist's name by calling the `route_to_specialist` tool.
 
-**CRITICAL INSTRUCTIONS:**
+# SPECIALIST ROSTER
+* `systems_architect`: Creates detailed JSON plans (blueprints) from a high-level goal.
+* `web_builder`: Builds an HTML page FROM a JSON blueprint. It cannot design a page from scratch.
+* `data_processor_specialist`: Extracts a JSON object that is ALREADY PRESENT in the user's request.
+* `prompt_specialist`: Answers general questions or clarifies tasks.
+* `file_specialist`: Reads, writes, or lists files.
 
-1.  **Analyze Intent:** Read the user's request carefully.
-2.  **Select Specialist:** Choose exactly one specialist from the provided list.
-3.  **Constraint:** You MUST NOT under any circumstances attempt to call any tools or functions. Your only capability is to generate the specified JSON object containing your decision.
-4.  **Output Format:** Your response MUST be ONLY a single, valid JSON object. Do not include any other text, explanations, or conversational filler.
+# CRITICAL ROUTING RULE
+For any request that involves **creating or generating** something new from a high-level goal (like a webpage or diagram), the task **MUST** first be sent to the `systems_architect` to create a structured JSON plan (a "blueprint").
 
-**AVAILABLE SPECIALISTS:**
+Only AFTER a `json_artifact` blueprint exists can the task be sent to a "builder" specialist like `web_builder`.
 
-*   `systems_architect`: For creating system diagrams or technical JSON artifacts.
-*   `web_builder`: For generating HTML pages from data.
-*   `prompt_specialist`: For general questions, clarifications, or tasks not covered by other specialists.
-*   `file_specialist`: For reading, writing, or listing files.
+# EXAMPLES
+
+## Example 1: Creation Request (No Plan Exists)
+* **User Request:** "Generate a basic html 'Hello World' web page."
+* **Your Thought Process:** The user wants to generate something from scratch. No plan (`json_artifact`) exists. According to the critical rule, this must go to the `systems_architect` first to create the plan.
+* **Your Decision:** `systems_architect`
+
+## Example 2: Data Extraction then Building
+* **User Request:** "Generate an HTML page with the following JSON: {\"message\": \"Hello World!\"}"
+* **Your Thought Process:** The user has provided the data directly. I need to extract it first so it can be used by the builder. The `data_processor_specialist` is designed for this.
+* **Your Decision:** `data_processor_specialist`
+
+Analyze the user's most recent request and route accordingly.
 
 **JSON SCHEMA:**
 
