Fixed naming convention for model

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -39,21 +39,21 @@ specialists:
     prompt_file: "router_specialist_prompt.md"
     description: "The master router. It analyzes the user's request and routes it to the appropriate specialist. It is the entry point of the graph."
     # This model should be capable of reliable tool/function calling.
-    model: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
+    api_identifier: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
     provider: "lmstudio"
 
   data_extractor_specialist:
     prompt_file: "data_extractor_specialist_prompt.md"
     description: "Extracts structured JSON data from unstructured text based on a schema."
     # This model should be good at following JSON formatting instructions.
-    model: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
+    api_identifier: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
     provider: "lmstudio"
 
   file_specialist:
     prompt_file: "file_specialist_prompt.md"
     description: "A specialist that uses tools to interact with the filesystem (read, write, list)."
     # This model must be capable of tool/function calling.
-    model: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
+    api_identifier: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
     provider: "lmstudio"
     # The root directory this specialist is allowed to operate in.
     # For security, this should be a dedicated, non-sensitive directory.
@@ -62,19 +62,19 @@ specialists:
   prompt_specialist:
     prompt_file: "prompt_specialist_prompt.md"
     description: "A general-purpose specialist for direct Q&A and instruction following. Acts as a fallback."
-    model: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
+    api_identifier: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
     provider: "lmstudio"
 
   systems_architect:
     prompt_file: "systems_architect_prompt.md"
     description: "Designs system components and generates structured data, like sequence diagrams in JSON format."
-    model: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
+    api_identifier: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
     provider: "lmstudio"
 
   web_builder:
     prompt_file: "web_builder_prompt.md"
     description: "Takes structured data (JSON) and generates an HTML visualization."
-    model: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
+    api_identifier: "lmstudio-community/Meta-Llama-3-8B-Instruct-GGUF"
     provider: "lmstudio"
 
   data_processor_specialist:
