Normalized config and prompts for distribution of .examples
Update configuration and prompts for specialists; enhance logging level and refine data extraction instructions; remove obsolete router prompt; improve systems architect and web builder descriptions.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ LMSTUDIO_BASE_URL="http://localhost:1234/v1"
 
 # Required for Ollama. The base URL for your local Ollama server.
 OLLAMA_BASE_URL="http://localhost:11434"
+
+# Level INFO will log informative entries as well as WARNING and ERROR levels.
+# Set to DEBUG for the most detailed logging.
+LOG_LEVEL="INFO"
